Add initial migrations, add README for new devs